--- a/src/readme
+++ b/src/readme
@@ -1,8 +1,11 @@
 
-ID of a contact is appended automatically by system in order to get ID of particular contact can see in db.json.
+In order to run take command prompt to src directory and execute npm run dev
+localhost url is http://localhost:3000/api/v1/AddressBook/ ;(here 3000 is port number)
 
 In Order to get data stored in database use GET http://localhost:3000/api/v1/AddressBook/
 In order to get information regarding a specific contact use GET http://localhost:3000/api/v1/AddressBook/"ID"("ID" append ID of contact);
+        ID of a contact is appended automatically by system in order to get ID of particular contact can see in db.json.
+        
 In order to add a new contact POST http://localhost:3000/api/v1/AddressBook/
     and in body pass json containing details.
     A contact must have 3 things Name, Address, Contact (Naming must be followed)
